--- a/Übung7/ueb07/src/testHTML.html
+++ b/Übung7/ueb07/src/testHTML.html
@@ -2,7 +2,7 @@
     <li><a href="http://www.htwsaar.de/">htw saar</a></li>
     <li><a href="http://www.google.com">Google</a></li>
     <a href="http://www.heise.de">Heise Online</a> 
-    <a href="yes why not">yes why not </a>
-    <a target="_blank" href="un lien avec 2 BLANK" target="_blank" >un lien avec 2 BLANK </a>
+    <a target="_blank"  href="yes why not">yes why not </a>
+    <a href="un lien avec 2 BLANK" target="_blank" >un lien avec 2 BLANK </a>
     < a href="TEst de lien">test de lien< / a >
 </p>
