--- a/Übung7/Uebung7/src/testHTML.html
+++ b/Übung7/Uebung7/src/testHTML.html
@@ -1,1 +1,11 @@
-<a href="http://www.bite.de">Bite</a>
+<p>
+<li><a href="http://www.htwsaar.de">HTW Saar</a></li>
+<li><a href="http://www.Google.com">Google</a></li>
+<a href="http://www.heise.de">Heise Online</a>
+
+<div><a href="http://www.wikipedia.de" target="_blank">Wikipedia</a></div>
+<a href="http://www.decathlon.fr" alt="Link">Decathlon</a>
+
+
+
+</p>
