--- a/Übung7/Uebung7/src/testHTML.html
+++ b/Übung7/Uebung7/src/testHTML.html
@@ -4,8 +4,14 @@
 <a href="http://www.heise.de">Heise Online</a>
 
 <div><a href="http://www.wikipedia.de" target="_blank">Wikipedia</a></div>
-<a href="http://www.decathlon.fr" alt="Link">Decathlon</a>
+<a href="http://www.decathlon.fr" alt="Link">Decathlon</a><a href="http://www.Apple.com" alt="Link">Apple</a><a href="http://www.Audi.de" alt="Link">Audi</a>
+<div><a href="http://www.Renault.fr" target="_blank">Renault</a></div>
 
+<a href="href.fr">HREF</a>
+
+<div><a href="www.Peugeot.fr" target="_blank">Peugeot</a></div>
+
+<div><a href = "www.Porsche.de" target="_blank">Porsche</a></div>
 
 
 </p>
